feat: enforce subtask-only estimates, Jira-first story creation, UI/UX improvements
- BoardService, DsrService, AutoScoreCalculator, ForecastController: estimates and time logging
  now consistently sourced from subtasks (Epic→Story→Subtask hierarchy), not from story/epic level
- PokerController: use LeadBoardAuthentication instead of X-User-Account-Id header
- PokerJiraService: create story in Jira FIRST, then save locally (Jira as single source of truth);
  auto-detect story type name (История/Story) from synced data
- DataQualityService: EPIC_NO_DUE_DATE and EPIC_NO_ESTIMATE rules now only for epics past TODO;
  TIME_LOGGED_WRONG_EPIC_STATUS checks subtask-level time; blocker check uses subtask time
- JiraClient: better error logging for Jira API failures (response body in logs)
- ConfigurationValidator: validate required config properties on startup
- AlertIcon: human-readable Russian rule names, uppercase severity labels
- PokerRoomPage, PlanningPokerPage: major UI/UX redesign with improved CSS
- DataQualityPage: UI improvements
- Tests updated to match new subtask hierarchy logic

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>